tests/fixtures/invalid/min_list_none.py
# Cannot call min() with List[int], None
x = min([1, 2, 3], None)
